# atomistic-parsers

./: pyproject.toml
.github/workflows/: python-actions.yaml
atomisticparsers/: __init__.py
atomisticparsers/amber/: __main__.py  parser.py
atomisticparsers/amber/metainfo/: __init__.py  amber.py
atomisticparsers/asap/: __main__.py  parser.py
atomisticparsers/asap/metainfo/: __init__.py
atomisticparsers/bopfox/: __main__.py  parser.py
atomisticparsers/bopfox/metainfo/: __init__.py  bopfox.py
atomisticparsers/dftbplus/: __main__.py  parser.py
atomisticparsers/dftbplus/metainfo/: __init__.py  dftbplus.py
atomisticparsers/dlpoly/: __main__.py  parser.py
atomisticparsers/dlpoly/metainfo/: __init__.py  dl_poly.py
atomisticparsers/gromacs/: __init__.py  __main__.py  parser.py
atomisticparsers/gromacs/metainfo/: __init__.py  gromacs.py
atomisticparsers/gromos/: __main__.py  parser.py
atomisticparsers/gromos/metainfo/: __init__.py  gromos.py
atomisticparsers/gulp/: __main__.py  parser.py
atomisticparsers/gulp/metainfo/: __init__.py  gulp.py
atomisticparsers/h5md/: __main__.py  parser.py
atomisticparsers/h5md/metainfo/: __init__.py  h5md.py
atomisticparsers/hoomdblue/: nomad_plugin.yaml
atomisticparsers/lammps/: __main__.py  parser.py
atomisticparsers/lammps/metainfo/: __init__.py  lammps.py
atomisticparsers/libatoms/: __main__.py  parser.py
atomisticparsers/libatoms/metainfo/: __init__.py  lib_atoms.py
atomisticparsers/namd/: __main__.py  parser.py
atomisticparsers/namd/metainfo/: __init__.py  namd.py
atomisticparsers/tinker/: __main__.py  parser.py
atomisticparsers/tinker/metainfo/: __init__.py  tinker.py
atomisticparsers/utils/: __init__.py  mdanalysis.py  parsers.py
atomisticparsers/xtb/: __main__.py  parser.py
atomisticparsers/xtb/metainfo/: __init__.py  xtb.py
tests/: test_bopfoxparser.py  test_dftbplusparser.py  test_dlpolyparser.py  test_gromacsparser.py  test_gulpparser.py  test_h5md.py  test_lammpsparser.py  test_libatomsparser.py  test_tinkerparser.py  test_xtbparser.py
tests/data/gromacs/free_energy_calculations/alchemical_transformation_single_run/: input_parameters.json
tests/data/gromacs/input_parameters/: input_parameters.json
tests/data/gromacs/umbrella_sampling/pmf_com/: bsProfs.xvg  bsResult.xvg  histo.xvg  popg-PW_charmm-59_histo.ps  profile.xvg  run
tests/data/gromacs/umbrella_sampling/us-0.0/: C9_AcO.gro  distances.pl  equ-run.mdp  equ.edr  equ.gro  equ.mdp  equ.tpr  equ.xtc  equ.xvg  heat-run.mdp  heat.edr  heat.gro  heat.mdp  heat.tpr  heat.xvg  init.gro  min-run.mdp  min.edr  min.gro  min.tpr  min.trr  prod-run.mdp  prod.edr  prod.gro  prod.mdp  prod.tpr  prodf-umbrella0.xvg  prodx-umbrella0.xvg
tests/data/gromacs/umbrella_sampling/us-0.1/: equ-run.mdp  equ.edr  equ.gro  equ.mdp  equ.tpr  equ.xtc  equ.xvg  heat-run.mdp  heat.edr  heat.gro  heat.mdp  heat.tpr  heat.xvg  init.gro  min-run.mdp  min.edr  min.gro  min.tpr  min.trr  prod-run.mdp  prod.edr  prod.gro  prod.mdp  prod.tpr  prodf-umbrella0.xvg  prodx-umbrella0.xvg
tests/data/gromacs/umbrella_sampling/us-0.2/: equ-run.mdp  equ.edr  equ.gro  equ.mdp  equ.tpr  equ.xtc  equ.xvg  heat-run.mdp  heat.edr  heat.gro  heat.mdp  heat.tpr  heat.xvg  init.gro  min-run.mdp  min.edr  min.gro  min.tpr  min.trr  prod-run.mdp  prod.edr  prod.gro  prod.mdp  prod.tpr  prodf-umbrella0.xvg  prodx-umbrella0.xvg
(+553 files in other folders)
